--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI
 on:
   push:
     tags:
-      - 'v*'  # Run workflow on version tags, e.g. v1.0.0
+      - '[0-9]+.[0-9]+.[0-9]+'  # Run workflow on version tags, e.g. 1.0.0
 
 jobs:
   deploy:
