--- a/astonish/agents/agents_creator.yaml
+++ b/astonish/agents/agents_creator.yaml
@@ -35,12 +35,9 @@ nodes:
       You are an expert YAML agentic flow designer and refiner.
       Your primary goal is to generate or refine a complete agentic flow YAML string based on user requirements, feedback, and strict framework rules.
 
-      **Framework Rules:** [Include rules 1-11 as before]
-
       **Operational Modes:**
-      1. **Initial Generation:** If 'current_yaml' input is missing, null, or empty, generate a NEW, complete YAML based on 'overall_idea' and 'available_tools', using the rules and example. Set 'refinement_complete' to `false` (forcing at least one review cycle).
-      2. **Refinement:** If 'current_yaml' and 'yaml_feedback' are provided AND 'yaml_feedback' is NOT 'SAVE' (case-insensitive, ignore whitespace), carefully modify the 'current_yaml' string ONLY to address the specific feedback, ensuring the result is valid YAML respecting all rules. Do not regenerate unrelated parts. Set 'refinement_complete' to `false`.
-      3. **Finalization:** If 'yaml_feedback' IS 'SAVE' (case-insensitive, ignore whitespace), set 'refinement_complete' to `true` and pass the 'current_yaml' input through unchanged as the output 'current_yaml'.
+      1. **Initial Generation:** If 'current_yaml' input is missing, null, or empty, generate a NEW, complete YAML based on 'overall_idea' and 'available_tools', using the rules and example.
+      2. **Refinement:** If 'current_yaml' and 'yaml_feedback' are provided, carefully modify the 'current_yaml' string ONLY to address the specific feedback, ensuring the result is valid YAML respecting all rules. Do not regenerate unrelated parts.
     prompt: |
       # --- Inputs ---
       # User's overall idea (for initial generation):
@@ -54,7 +51,10 @@ nodes:
 
       # Validation Error (if refining - will be absent on first run):
       {validation_error}
-      # If there is a validation error, the YAML is invalid. Fix it based on the error message.
+      
+      # If there is a validation error above, the YAML is invalid. Fix it based on the error message.
+      # Only change the part of the YAML that is invalid, and keep the rest of the YAML as it is.
+      # For the parts affected by the validation error, make sure to follow the rules and example, double check the fields allowed type and example for that.
 
       # User Feedback on Previous Version (if refining - will be absent on first run):
       {yaml_feedback}
@@ -65,14 +65,32 @@ nodes:
       3. `llm`: For logic, generation, tool calls. Fields: name, type, system, prompt, output_model, user_message (optional), tools (optional, bool), tools_selection (optional, list[str]).
       4. Tools: 'tools: True' requires 'tools_selection' listing tools from 'Available Tools'. Tools are used BY 'llm' nodes.
       5. `output_model`: Dictionary mapping string variable names to string types ("str", "list", "dict", "bool", "int"). Example: `{{"results": "list"}}`.
-      6. `options` is a variable from output_model of type list or a list of strings (e.g., ["option1", "option2"]), if options is not provided, it will accept any string. Whenever possible, use the 'options' field to limit user input to a specific set of choices, and use the options in the flow, reducing the amount of agent calls.
+      6. `options` is a variable from output_model of type list or a list of strings (e.g., ["option1", "option2"]). Whenever possible, use the 'options' field to limit user input to a specific set of choices, and use the options in the flow, reducing the amount of agent calls.
+        Good Examples: 
+          - `{{"options": ["option1", "option2"]}}` for a list of strings.
+          - `{{"options": [options_list]}}` for a variable from output_model of type list.
+
+        Bad examples (not allowed):
+          - `{{"options": option1}}` (not a list)
+          - `{{"options": "option1, option2"}}` (not a list)
+
       6.1. `options` is very helpful if the agent from previous node is a list of strings, and you want to limit the user input to one of the options. Example: `{{"options": ["option1", "option2"]}}`. If the options is a output_model variable, it should just mention the variable name. Example: `{{"options": [options_list]}}`, no curly braces around the list variable name.
-      6.2. `options` cannot be a complex expression like lamba, it should be a list of strings or a variable from output_model of type list.
-      6.3. `options` must be a list, it CANNOT be something like `{{"options": "option1"}}` or `{{"options": "option1, option2"}}`, instead it must use the dash (-) for each item, according to the YAML schema for lists.
+      6.2. `options` cannot be a complex expression like lamba, it should always be a list, and can be strings or a variable from output_model of type list.
+      6.3. `options` must be a list, it CANNOT be something like `{{"options": option1}}` or `{{"options": "option1, option2"}}`, instead it must use the dash (-) for each item, according to the YAML schema for lists.
       7. `user_message`: Optional LIST of strings (variable names from output_model) for display. Omit if not needed. Example: `["final_summary"]`. It should be an output_model variable name, or a string. It must be used everytime the information is required to be displayed to the user.
       8. Ensure unique node names, correct variable usage between nodes (`{{variable}}`), valid lambda functions for conditions (`"lambda x: x['var'] == True"`).
       9. Structure: Top-level 'description', 'nodes' (list of node dicts), 'flow' (list of transition dicts like `{{'from': 'nodeA', 'to': 'nodeB'}}` or using 'edges').
       10. Loops: If iteration is needed, implement using an index variable, conditional edges, and index increment nodes.
+        Loop Detection Rule:
+          If an llm node's prompt refers to a variable of type list (e.g., changed_files, items_to_process) and the node uses a tool or operation that processes a single item (e.g., read_file, analyze_entry, summarize_text), then automatically implement a loop structure using:
+
+          current_index (type: int)
+          A node that selects the current item (e.g., current_file = changed_files[current_index])
+          A node that processes the item and appends to a shared result (e.g., file_contents)
+          An increment node for current_index
+          A loop condition in flow.edges using:
+          "lambda x: x['current_index'] < len(x['changed_files'])"
+
       11. Conditions: Use 'edges' with lambda functions for branching.
       12. All the conditional logic should be handled within the flow section, it should use lambda for checking conditions of the output_model variables.
       13. When using the shell_command tool, make sure that the command to be run is in the prompt.
@@ -193,7 +211,7 @@ nodes:
       Output the resulting YAML string (either newly generated, refined, or passed-through for saving) as 'current_yaml', and the boolean 'refinement_complete' flag. Output ONLY the required JSON object.
     output_model:
       current_yaml: str
-      refinement_complete: bool
+    print_prompt: False
 
   - name: summarize_and_display_yaml
     type: llm
@@ -359,7 +377,7 @@ nodes:
       save_confirmation: str
     user_message:
       - save_confirmation
-      - "Flow saved successfully! You can now use by running astonish agents run {suggested_flow_name}"
+      - "Flow saved successfully! You can now use by running 'astonish agents run {suggested_flow_name}'"
 
 flow:
   - from: START
