--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,9 @@ dependencies = [
     "inquirer==3.4.0",
     "langchain-anthropic==0.3.12",
     "langchain-google-genai==2.1.4",
-    "rich==14.0.0"
+    "rich==14.0.0",
+    "unidiff==0.7.5",
+    "json5==0.12.0"
 ]
 
 [project.optional-dependencies]
