removed raw_tool_output as required

--- a/astonish/agents/agents_creator.yaml
+++ b/astonish/agents/agents_creator.yaml
@@ -315,7 +315,7 @@ nodes:
                 print_state: {{type: bool, required: False}}
                 raw_tool_output:
                   type: map
-                  required: True
+                  required: False
                   mapping: 
                     regex;(.+): 
                       type: str
