fixed input and removed the print_state from agent creator

--- a/astonish/agents/agents_creator.yaml
+++ b/astonish/agents/agents_creator.yaml
@@ -369,7 +369,7 @@ nodes:
       Provide True or False as output. True if valid, False if invalid.
     output_model:
       is_yaml_valid: bool
-    print_state: True
+    print_state: False
 
   - name: suggest_flow_name
     type: llm
