--- a/docs/package.json
+++ b/docs/package.json
@@ -29,6 +29,9 @@
     "@docusaurus/types": "3.8.1",
     "typescript": "~5.6.2"
   },
+  "overrides": {
+    "webpack-dev-server": "5.2.1"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
