--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,48 +1,31 @@
-name: Build Package
+name: Build
 
 on:
   push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'  # Run workflow on version tags, e.g. 1.0.0
+    branches: ['**']
+  pull_request:
+    branches: [main, goadk_migration]
 
 jobs:
   build:
-    name: Build Package
+    name: Build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+          go-version: '1.23'
+          cache: true
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build
-          
-          # Install the package in development mode with --no-deps
-          pip install --no-deps -e .
+      - name: Download dependencies
+        run: go mod download
 
-      # Skip tests since we're installing with --no-deps
-      # - name: Run tests
-      #   run: |
-      #     pytest
+      - name: Build
+        run: go build -v -o astonish .
 
-      - name: Build package
-        run: |
-          python -m build --wheel
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-${{ matrix.python-version }}
-          path: dist/
-          retention-days: 5
+      - name: Run tests
+        run: go test -v ./...
