--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,17 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-          cache: true
+          cache: false  # Disable to ensure fresh embed of web/dist
 
       - name: Download dependencies
         run: go mod download
 
       - name: Build
-        run: go build -v -o astonish .
+        run: |
+          # Force Go to see embed.go as modified so it re-embeds the dist folder
+          touch web/embed.go
+          go clean -cache
+          go build -v -o astonish .
 
       - name: Run tests
         run: go test -v ./...
