--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.37.1",
+    "@six-tech/starlight-theme-six": "^1.0.16",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.6.1",
     "sharp": "^0.34.2",
