--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
     "@six-tech/starlight-theme-six": "^1.0.16",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.6.1",
+    "astro-mermaid": "^1.2.0",
     "sharp": "^0.34.2",
     "tailwindcss": "^4.1.18"
   }
