--- a/docs/package.json
+++ b/docs/package.json
@@ -10,11 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
     "@astrojs/starlight": "^0.37.1",
+    "@bsmnt/scrollytelling": "^0.3.3",
     "@six-tech/starlight-theme-six": "^1.0.16",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.6.1",
     "astro-mermaid": "^1.2.0",
+    "gsap": "^3.14.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sharp": "^0.34.2",
     "tailwindcss": "^4.1.18"
   }
