--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.2.5",
   "type": "module",
+  "license": "AGPL-3.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
