improved error displayed in the ui to show real error found in the execution. Added docker-compose with data mount

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -2,7 +2,7 @@ services:
   astonish:
     build:
       context: .
-      dockerfile: Dockerfile.e2e
+      dockerfile: Dockerfile
     ports:
       - "9393:9393"
     # Each container starts with a completely clean slate
